--- a/view/company_form.xml
+++ b/view/company_form.xml
@@ -20,6 +20,12 @@ The COPYRIGHT file at the top level of this repository contains the full copyrig
             <field name="purchase_qty"/>
             <label name="shipment_qty"/>
             <field name="shipment_qty"/>
+            <label name="show_uom"/>
+            <field name="show_uom"/>
+            <label name="show_origins"/>
+            <field name="show_origins"/>
+            <label name="rgpd"/>
+            <field name="rgpd"/>
         </group>
     </xpath>
 </data>
